--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     
     <h1>proyecto de sitio web 2022-16-01</h1>
 
-    <h3>ana maria mendoza tabares <br>
-        ingeneria de sistemas 20-2-22 
+    <h3> autor :ana maria mendoza tabares <br>
+        programa:ingeneria de sistemas 
+        fecha: 20-2-22 
 
 
     </h3>
     <h3></h3>
+<a href="fase2/design.html"></a>
 </body>
 </html>
