--- a/fase3/index.html
+++ b/fase3/index.html
@@ -15,7 +15,8 @@
 
     </header>
     <nav>
-        <ul>
+        
+        <ul class=" menu" >
            
             <li><a href="menu/inicio.html">inicio</a></li>
             <li>Temas</li>
@@ -28,7 +29,7 @@
             <li><a href="menu/video.html">Video</a></li>
         </ul>
             <li>Aprendizaje</li>
-            <li><a href="menu/autor.html">Autor</a> </li>
+            <li><a href="menu/autor.html">Autor</a> </li> 
         </ul>
     </nav>
     <section>
