--- a/fase3/menu/inicio.html
+++ b/fase3/menu/inicio.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <p>an amaria </p>
-</body>
+    <p><h3>Proposito del Sitio</h3>
+        <p> 
+
+        
+            Elaborar recursos educativos digitales para dinamizar las estrategias de
+            aprendizaje, este recurso se explica los temas flex box , listas y enlaces. 
+            
+        </p>
+<p>
+    ¿que es flex box ?
+    Flexbox tiene como meta ser una forma más eficiente de crear diseños, alinear y distribuir
+     espacios entre ítems en un contenedor, incluso cuando las 
+    dimensiones de esos ítems son desconocidas y/o dinámicas (en virtud de eso el término "flex").
+    <p>
+    ¿que son listas y enlaces ?
+    nos permite crear conjuntos de elementos en forma de lista dentro de una página, todos los 
+    cuales irán precedidos, generalmente, por un guión o número. y elance es un inverviculo una opcion 
+    mas facil de abrir otra pagina web solo con un clic.  </p>
+</body> <p></p>
 </html>
