--- a/fase4/index.html
+++ b/fase4/index.html
@@ -24,12 +24,12 @@
                 <li><a href="menu/Flexbox.html">flex box</a></li>
                 <li><a href="menu/listasyenlaces.html">Listas y Enlaces </a></li>
             </ul>
-            <li>Recursos Multimedios</li>
-            <ul><li><a href="menu/post.html">Post </a></li>
-            <li><a href="menu/video.html">Video</a></li>
+            <li>Evaluacion</li>
+            <ul><li><a href="evaluacion1.html">evaluacion1  </a></li>
+            <li><a href="evaluacion2.html">evaluaion 2</a></li>
         </ul>
             <li>Aprendizaje</li>
-            <li><a href="menu/autor.html">Autor</a> </li> 
+            <li><a href="autor.html">Autor</a> </li> 
         </ul>
     </nav>
     <section>
