--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <a href="fase2/design.html">fase 2 </a>
 <p>
     <a href="fase3/index.html">fase 3 </a>
+   
 </p>
+<p> <a href="fase4/index.html">fase 4 </a></p>
 
 </body>
 </html>
